--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "A website, which shows the daily/weekly menu of Kumpula's two unicafes, Exactum and Chemicum. Created with node and react.",
   "main": "app.js",
+  "engines": {
+    "node": "6.11.3",
+    "npm": "3.10.10"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
