--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.1",
+    "mongoose": "^4.12.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
