--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.1",
     "mongoose": "^4.12.0",
+    "promise": "^8.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
